[gd_scene load_steps=4 format=3 uid="uid://4kqfpmqfsapd"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_3ifai"]
[ext_resource type="Texture2D" uid="uid://ca6haqu7pmw5l" path="res://hud_icons/gems.png" id="2_5q0rp"]
[ext_resource type="Texture2D" uid="uid://celctjanh1nv5" path="res://hud_icons/lives.png" id="3_h6mie"]

[node name="HUD" type="CanvasLayer" groups=["hud"]]
script = ExtResource("1_3ifai")

[node name="LevelLabel" type="Label" parent="."]
offset_left = 7.0
offset_top = 8.0
offset_right = 103.0
offset_bottom = 31.0
theme_type_variation = &"TooltipLabel"
text = "Level: 1"

[node name="GemsContainer" type="HBoxContainer" parent="."]
offset_left = 7.0
offset_top = 80.0
offset_right = 128.0
offset_bottom = 120.0

[node name="GemsIcon" type="TextureRect" parent="GemsContainer"]
layout_mode = 2
texture = ExtResource("2_5q0rp")
expand_mode = 2

[node name="GemsLabel" type="Label" parent="GemsContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "0"

[node name="LivesContainer" type="HBoxContainer" parent="."]
offset_left = 7.0
offset_top = 34.0
offset_right = 63.0
offset_bottom = 74.0
alignment = 1

[node name="LivesIcon" type="TextureRect" parent="LivesContainer"]
layout_mode = 2
texture = ExtResource("3_h6mie")
expand_mode = 2

[node name="LivesLabel" type="Label" parent="LivesContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"HeaderSmall"
text = "3"
vertical_alignment = 1
